syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.klausapp.scorecalculator.service.ticketcategoryscores";
option java_outer_classname = "TicketCategoryScoresProto";

service TicketCategoryScoresService {
  rpc getTicketCategoryScores(TicketCategoryScoresRequest) returns (TicketCategoryScoresResponse);
}

message TicketCategoryScoresRequest {
  string period_start_date = 1;
  string period_end_date = 2;
}

message CategoryScore {
  int32 category_id = 1;
  int32 category_score = 2;
}

message TicketCategoryScore {
  int32 ticket_id = 1;
  repeated CategoryScore category_scores = 2;
}

message TicketCategoryScoresResponse {
  repeated TicketCategoryScore ticket_category_scores = 1;
}